# AgriSage

log/: latest_list
src/bottle_detection_msgs/: CMakeLists.txt  package.xml
src/bottle_detection_msgs/msg/: BottleDetection.msg
src/bottle_detection_ros2/: package.xml  setup.cfg  setup.py
src/bottle_detection_ros2/bottle_detection_ros2/: bottle_detector.py  bottle_detector_node.py  stereo_camera.py  stereo_camera_node.py
src/bottle_detection_ros2/launch/: bottle_detection.launch.py
